# winhandle

./: Cargo.toml  README.md
src/: comptr.rs  handle.rs  lib.rs  macros.rs  mem.rs  sys.rs  wstring.rs
