[package]
name = "winhandle"
version = "0.1.0"

description = "A set of types to make interacting with Windows APIs safer and easier."
repository = "https://github.com/JohnColanduoni/winhandle"
authors = ["john@colanduoni.com"]
license = "MIT OR Apache-2.0"

keywords = ["windows"]
categories = ["os::windows-apis", "external-ffi-bindings"]

[dependencies]
log = ">=0.3"
winapi = ">=0.2"
kernel32-sys = ">=0.2"
lazy_static = "0.2"
widestring = "0.2"

[dev-dependencies]
advapi32-sys = ">=0.2"
user32-sys = ">=0.2"